# Kivo

./: CHANGELOG.md  README.md  TODO.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
.github/: FUNDING.yml
.github/workflows/: release.yml  tests.yml
desktop/: Cargo.toml  tauri.conf.json
desktop/src/http/: client.rs  models.rs
desktop/src/storage/: mod.rs  tests.rs
docs/: json-query-engine.md
src/: index.css
src/app/: App.jsx
src/components/: Updater.jsx
src/components/ui/: EnvHighlightInput.jsx  JsonTree.jsx  button.jsx  card.jsx  input.jsx  textarea.jsx
src/components/workspace/: AppHeader.jsx  CollectionSettingsPage.jsx  EmptyCanvas.jsx  EnvEditor.jsx  RequestPane.jsx  RequestTabs.jsx  ResponsePane.jsx  SetupWizard.jsx  Sidebar.jsx  SidebarResizer.jsx  ThemeToggle.jsx  WorkspaceModal.jsx
src/hooks/: use-collection-config.js  use-theme.js  use-workspace-store.js
src/lib/: http-client.js  http-ui.js  json-filter.js  workspace-store.js  workspace-utils.js
