[package]
name = "kivo"
version = "0.3.6"
description = "A minimal cross-platform HTTP client built with Rust and Tauri for fast and simple API testing."
authors = ["dexter-xD"]
license = "MIT"
repository = "https://github.com/dexter-xD/Kivo"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
base64 = "0.22.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2.2.5"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"

[dev-dependencies]
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
